--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,3 +18,17 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+ name: go-kube-service
+spec:
+  type: NodePort
+  selector:
+    app: go-kube
+  ports:
+  - protocol: TCP
+    port: 8080 
+    targetPort: 8080
+    nodePort: 30000 
